--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,5 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
 </head>
 <body>
-  <race-type1>loading</race-type1>
+  <main>loading</main>
 </body>
